# solarust

./: .gitignore  Cargo.toml  Makefile  README.md  configuration.json  flake.nix
.github/workflows/: release.yml
aur/: PKGBUILD
scripts/: commit-msg
src/: main.rs
